sua lai file BT_FormFavorite.html va CSS Form Favorite

--- a/BT_FormFavorite.html
+++ b/BT_FormFavorite.html
@@ -21,18 +21,25 @@
     <form style="color: royalblue; margin-left: 55px;" action="/action_page.php">
         Sở thích:
     </form>
-    <div class="label1">
+    <div id="abc">
+    <div id="a">
         <label><input name="hobby" value="sport" type="checkbox"/>Thể thao</label>
         <label><input name="hobby" value="web" type="checkbox"/>Lướt web</label>
         <label><input name="hobby" value="travel" type="checkbox"/>Du lịch</label><br/>
+    </div>
+    <div id="b">
         <label><input name="hobby" value="music" type="checkbox"/>Âm nhạc</label>
         <label><input name="hobby" value="game" type="checkbox"/>Chơi game</label><br/>
+    </div>
+    <div id="c">
         <label><input name="hobby" value="book" type="checkbox"/>Đọc sách</label>
         <label><input name="hobby" value="movie" type="checkbox"/>Điện ảnh</label><br/>
     </div>
-        <input style="margin-left:60px; margin-top: 10px; width: 100px; height: 30px;" type="submit" value="Gửi thông tin"/>
-        <input style="margin-left:150px; width: 100px; height: 30px;" type="submit" value="Nhập lại"/>
-
+    </div>
+    <div id="button">
+        <input style="width: 90px; height: 30px; margin-left: 100px;" type="submit" value="Gửi thông tin"/>
+        <input style="width: 90px; height: 30px; margin-left: 50px; " type="submit" value="Nhập lại"/>
+    </div>
 
     <div id="form2">
         <h2 style="color:royalblue; background:skyblue; max-width: 500px; height: 45px;">ĐĂNG KÝ HỌC VIÊN</h2>
