--- a/Chess.html
+++ b/Chess.html
@@ -4,108 +4,109 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSSforChess.css">
-    <title>Document</title>
+    <title>Chess</title>
 </head>
 <body>
     <table>
+        <col><col><col><col><col><col><col><col><col>
         <tr>
-            <td style="background-color: orange;"></td>
-            <td style="background-color: orange;">1</td>
-            <td style="background-color: orange;">2</td>
-            <td style="background-color: orange;">3</td>
-            <td style="background-color: orange;">4</td>
-            <td style="background-color: orange;">5</td>
-            <td style="background-color: orange;">6</td>
-            <td style="background-color: orange;">7</td>
-            <td style="background-color: orange;">8</td>
+            <th></th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+            <th>6</th>
+            <th>7</th>
+            <th>8</th>
         </tr>
         <tr>
-            <td style="background-color: orange;">A</td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
+            <th>A</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">B</td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
+            <th>B</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">C</td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
+            <th>C</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">D</td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
+            <th>D</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">E</td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
+            <th>E</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">F</td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
+            <th>F</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">G</td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
+            <th>G</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
         <tr>
-            <td style="background-color: orange;">H</td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
-            <td style="background-color: black;"></td>
-            <td></td>
+            <th>H</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </table>
 </body>
