--- a/Chess.html
+++ b/Chess.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <table>
-        <col><col><col><col><col><col><col><col><col>
         <tr>
             <th></th>
             <th>1</th>
@@ -22,91 +21,91 @@
         </tr>
         <tr>
             <th>A</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
         </tr>
         <tr>
             <th>B</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
         </tr>
         <tr>
             <th>C</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
         </tr>
         <tr>
             <th>D</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
         </tr>
         <tr>
             <th>E</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
         </tr>
         <tr>
             <th>F</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
         </tr>
         <tr>
             <th>G</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
         </tr>
         <tr>
             <th>H</th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
+            <td style="background: black;"></td>
+            <td></td>
         </tr>
     </table>
 </body>
